--- a/views/farm_u.ejs
+++ b/views/farm_u.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AeroSwift - Início</title>
+    <title>AeroSwift - Fazendas</title>
     <link rel="stylesheet" href="/css/farm_u.css">
     <link rel="shortcut icon" href="/images/favicon.svg" type="image/x-icon">
 </head>
