--- a/public/css/home.css
+++ b/public/css/home.css
@@ -53,12 +53,21 @@ nav ul li a {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
+nav ul li a:hover {
+    color: #007bff;
+}
+
 .perfil-btn {
     background: none;
     border: none;
     cursor: pointer;
     padding: 0;
     position: relative;
+}
+
+.perfil-btn img {
+    width: 30px;
+    height: 30px;
 }
 
 .modal {
@@ -118,6 +127,7 @@ nav ul li a {
 .modal.show {
     display: block;
 }
+
 
 /* Estilo para lista de serviços */
 .servicos-list {
@@ -217,4 +227,38 @@ nav ul li a {
 
 .deletar-button:hover {
     background-color: #c9302c;
+}
+
+.main-title {
+    margin: 20px 50px;
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+}
+
+.search-container {
+    display: flex;
+    align-items: center;
+    margin: 0 50px 20px;
+    gap: 10px;
+}
+
+.search-bar {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    font-size: 16px;
+    outline: none;
+}
+
+.search-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.search-button img {
+    width: 20px;
+    height: 20px;
 }
