--- a/public/css/farm.css
+++ b/public/css/farm.css
@@ -70,6 +70,10 @@ nav ul li a:hover {
     height: 30px;
 }
 
+#closePerfilModal {
+    display: none;
+}
+
 .modal {
     display: none; 
     position: absolute;
@@ -77,7 +81,7 @@ nav ul li a:hover {
     right: 10px; 
     z-index: 2;
     width: 200px;
-    background-color: #fefefe;
+    background-color: #FFFACD;
     border-radius: 15px; 
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -114,9 +118,7 @@ nav ul li a:hover {
     text-align: left;
 }
 
-.modal-content li button:hover {
-    background-color: #f0f0f0;
-}
+
 
 .modal-content li img.icon {
     width: 20px;
@@ -190,20 +192,48 @@ nav ul li a:hover {
     display: flex;
     align-items: center;
     flex: 1;
+    justify-content: space-between; /* Alinha os elementos extremos */
 }
 
 .fazenda-nome {
     font-size: 18px;
     font-weight: bold;
+    flex: 2; /* Dá espaço proporcional ao nome */
 }
 
-/* Estilo dos botões de ação (Editar e Deletar) */
 .fazenda-acoes {
     display: flex;
     align-items: center;
-    gap: 15px; /* Espaçamento entre os botões de editar e deletar */
+    gap: 10px; /* Espaçamento entre todos os botões */
 }
 
+.pdf-button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #4CAF50; /* Cor de fundo */
+    color: #fff; /* Cor do texto */
+    text-decoration: none;
+    padding: 8px 12px; /* Ajuste para harmonizar com os outros botões */
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: bold;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.pdf-button img {
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
+}
+
+.pdf-button:hover {
+    background-color: #45a049;
+    transform: scale(1.05);
+}
+
+/* Estilo dos botões de ação (Editar e Deletar) */
 .fazenda-edit-button img,
 .fazenda-delete-button img {
     width: 30px;
@@ -292,4 +322,51 @@ nav ul li a:hover {
 
 .fazenda-submit-btn:hover {
     background-color: #0056b3;
+}
+
+.sem-pdf {
+    display: inline-block;
+    color: #888; /* Cor do texto "PDF não disponível" */
+    font-size: 14px;
+    font-style: italic;
+}
+
+.search-container {
+    display: flex;
+    align-items: center;
+    margin: 0 50px 20px;
+    gap: 10px;
+}
+
+.search-bar {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    font-size: 16px;
+    outline: none;
+}
+
+.search-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.search-button img {
+    width: 20px;
+    height: 20px;
+}
+
+/* Fazendas ocultas durante a pesquisa */
+.fazenda-item.hidden {
+    display: none; /* Garante que o item oculto não ocupe espaço */
+}
+
+/* Para a lista inteira, caso nenhuma fazenda seja encontrada */
+.fazendas-list.empty {
+    text-align: center;
+    font-size: 18px;
+    color: #888;
+    padding: 20px;
 }
